--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,10 @@
         <p>
           Mint yours for <b>0.02 ETH</b> per NFT. Get free ETH on Rinkeby testnet from the
           <a href="https://rinkebyfaucet.com/" title="Rinkeby Faucet" target="_blank" rel="noopener noreferrer">
-            Rinkeby Faucet </a
-          >.
+            Rinkeby Faucet</a
+          >. In addition, reserve enough ETH as transaction fees. We recommend at least 0.001 ETH for gas.
         </p>
-        <p>Only <b>2</b> NFTs can be minted per wallet.</p>
+        <p>Maximum of <b>2</b> NFTs can be minted per wallet.</p>
         <div id="loadingDiv">Loading...</div>
         <div id="controldiv" hidden>
           <div id="notrinkebydiv">
@@ -56,7 +56,7 @@
             <p>Please change Ethereum network to Rinkeby Testnet.</p>
           </div>
           <div id="connectdiv">
-            <button onclick="connectWallet()">Connect Wallet</button>
+            <button id="connectbtn">Connect Wallet</button>
           </div>
           <div id="mintdiv">
             <div id="balancediv"><!-- Balance: 1.0345 ETH --></div>
@@ -65,10 +65,9 @@
               <input type="number" id="amount" name="amount" maxlength="1" size="3" min="1" max="2" value="1" />
             </div>
             <div>
-              <button onclick="mint()">Mint</button>
+              <button id="mintbtn">Mint</button>
             </div>
           </div>
-          <div id="errordiv"></div>
           <div id="nftsLeft"><!-- # of 1000 Remaining --></div>
         </div>
       </div>
@@ -81,6 +80,16 @@
       <div class="sub_title">FAQ</div>
       <p>Coming soon...</p>
     </section>
+
+    <div id="popupdiv" hidden>
+      <div class="overlay">
+        <div class="message">
+          <div id="successdiv"></div>
+          <div id="errordiv"></div>
+          <button id="okbtn">OK</button>
+        </div>
+      </div>
+    </div>
 
     <script type="module" src="/main.js"></script>
   </body>
