Update FAQ and Attributes. Convert style to stylus.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="title">Lucky Smileys</div>
       <div class="menu">
         <a href="#home">Home</a>
-        <a href="#attributes">Attributes</a>
+        <a href="#traits">Traits</a>
         <a href="#faq">FAQ</a>
       </div>
     </header>
@@ -72,13 +72,234 @@
         </div>
       </div>
     </section>
-    <section id="attributes">
-      <div class="sub_title">Attributes</div>
-      <p>Coming soon...</p>
+
+    <section id="traits">
+      <div class="sub_title">Traits / Attributes</div>
+      <p>
+        Every Lucky Smiley is made of multiple traits which define its rarity. Below are all available traits. Traits
+        are randomly selected and used in forming graphic layers that were blended together to generate each smiley.
+      </p>
+      <table class="trait">
+        <tr>
+          <td class="name">Background</td>
+          <td class="images">
+            <div class="attribute">
+              <img src="/traits/background/blue.png" alt="Blue" title="Blue" />
+              <p class="a_title">Blue</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/brown.png" alt="Brown" title="Brown" />
+              <p class="a_title">Brown</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/green.png" alt="Green" title="Green" />
+              <p class="a_title">Green</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/purple.png" alt="Purple" title="Purple" />
+              <p class="a_title">Purple</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/red.png" alt="Red" title="Red" />
+              <p class="a_title">Red</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/white.png" alt="White" title="White" />
+              <p class="a_title">White</p>
+              <p>Rarity: 40%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/background/yellow.png" alt="Yellow" title="Yellow" />
+              <p class="a_title">Yellow</p>
+              <p>Rarity: 10%</p>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td class="name">Eyes</td>
+          <td class="images">
+            <div class="attribute">
+              <img src="/traits/eyes/close.png" alt="Close" title="Close" />
+              <p class="a_title">Close</p>
+              <p>Rarity: 25%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/dizzy.png" alt="Dizzy" title="Dizzy" />
+              <p class="a_title">Dizzy</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/heart.png" alt="Heart" title="Heart" />
+              <p class="a_title">Heart</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/open.png" alt="Open" title="Open" />
+              <p class="a_title">Open</p>
+              <p>Rarity: 25%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/shade.png" alt="Shade" title="Shade" />
+              <p class="a_title">Shade</p>
+              <p>Rarity: 5%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/star.png" alt="Star" title="Star" />
+              <p class="a_title">Star</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/eyes/wink.png" alt="Wink" title="Wink" />
+              <p class="a_title">Wink</p>
+              <p>Rarity: 15%</p>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td class="name">Mouth</td>
+          <td class="images">
+            <div class="attribute">
+              <img src="/traits/mouth/grin.png" alt="Grin" title="Grin" />
+              <p class="a_title">Grin</p>
+              <p>Rarity: 15%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/kiss.png" alt="Kiss" title="Kiss" />
+              <p class="a_title">Kiss</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/moustache.png" alt="Moustache" title="Moustache" />
+              <p class="a_title">Moustache</p>
+              <p>Rarity: 5%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/nervous.png" alt="Nervous" title="Nervous" />
+              <p class="a_title">Nervous</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/sad.png" alt="Sad" title="Sad" />
+              <p class="a_title">Sad</p>
+              <p>Rarity: 5%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/silly.png" alt="Silly" title="Silly" />
+              <p class="a_title">Silly</p>
+              <p>Rarity: 10%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/smile.png" alt="Smile" title="Smile" />
+              <p class="a_title">Smile</p>
+              <p>Rarity: 30%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/mouth/surprise.png" alt="Surprise" title="Surprise" />
+              <p class="a_title">Surprise</p>
+              <p>Rarity: 15%</p>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td class="name">Accessory</td>
+          <td class="images">
+            <div class="attribute">
+              <img src="/traits/accessory/angel_halo.png" alt="Angel Halo" title="Angel Halo" />
+              <p class="a_title">Angel Halo</p>
+              <p>Rarity: 2%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/accessory/devil_horns.png" alt="Devil Horns" title="Devil Horns" />
+              <p class="a_title">Devil Horns</p>
+              <p>Rarity: 3%</p>
+            </div>
+            <div class="attribute">
+              <img src="/traits/accessory/none.png" alt="None" title="None" />
+              <p class="a_title">None</p>
+              <p>Rarity: 95%</p>
+            </div>
+          </td>
+        </tr>
+      </table>
     </section>
+
     <section id="faq">
       <div class="sub_title">FAQ</div>
-      <p>Coming soon...</p>
+      <div class="faqdiv">
+        <p class="question">1. What are Lucky Smileys?</p>
+        <p>
+          Lucky Smileys are 1000 handcrafted NFT smileys on Rinkeby Ethereum testnet. This NFTs collection was created
+          as part of the
+          <a
+            href="https://philippsandner.medium.com/call-for-applications-for-nft-talents-an-18-week-mentoring-program-empowering-talent-for-ee48be501ea0"
+            title="NFT Talents"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            NFT Talents
+          </a>
+          program. Special thanks to the program organizers.
+        </p>
+      </div>
+      <div class="faqdiv">
+        <p class="question">2. What are the technical details of the project setup?</p>
+        <p>
+          NFTs Marketplace:
+          <a
+            href="https://testnets.opensea.io/collection/luckysmileys"
+            title="OpenSea"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Lucky Smileys
+          </a>
+          on OpenSea Testnet
+        </p>
+        <p>
+          Smart Contract Address:
+          <a
+            href="https://rinkeby.etherscan.io/address/0xaB4871db78bf23CfDfF735d1be04c0396A077CC1"
+            title="Etherscan"
+            target="_blank"
+            rel="noopener noreferrer"
+            >0xaB4871db78bf23CfDfF735d1be04c0396A077CC1</a
+          >
+        </p>
+        <p>
+          Source code:
+          <a href="https://github.com/t4top/lucky-smileys" title="Github" target="_blank" rel="noopener noreferrer"
+            >github.com/t4top/lucky-smileys</a
+          >
+        </p>
+        <p>
+          Storage for the assets: IPFS distributed storage<br />
+          Metadata JSON:
+          <a
+            href="https://nftstorage.link/ipfs/bafybeigdit5g5sqypxqpm5i5hjolplb6deozcmumftwnebdjt5jcpdnc2m"
+            title="IPFS for Metadata"
+            target="_blank"
+            rel="noopener noreferrer"
+            >ipfs://bafybeigdit5g5sqypxqpm5i5hjolplb6deozcmumftwnebdjt5jcpdnc2m</a
+          >
+          <br />Image Data:
+          <a
+            href="https://nftstorage.link/ipfs/bafybeih6p3dmzjtji5d2j3mcun4ya55kdsgghd4fofmzwbxsvvdmtmszi4"
+            title="IPFS for Image Data"
+            target="_blank"
+            rel="noopener noreferrer"
+            >ipfs://bafybeih6p3dmzjtji5d2j3mcun4ya55kdsgghd4fofmzwbxsvvdmtmszi4</a
+          >
+        </p>
+        <p>Project License: GPL-3.0-or-later</p>
+      </div>
     </section>
 
     <div id="popupdiv" hidden>
