Add Open Graph meta info for improved SEO and Social Media support

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#" xmlns:og="https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +10,20 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <title>Lucky Smileys NFTs for NFTTalents Program</title>
+    <meta property="og:site_name" content="Lucky Smileys NFTs" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:title" content="Lucky Smileys NFTs" />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="Lucky Smileys NFTs" />
+    <meta name="canonical" content="https://luckysmileys.aztemi.com/" />
+    <meta property="og:url" content="https://luckysmileys.aztemi.com/" />
+    <meta name="keywords" content="NFTs, Lucky Smileys, NFTTalents, Rinkeby, Ethereum" />
+    <meta property="og:image" content="https://luckysmileys.aztemi.com/android-chrome-192x192.png" />
+    <meta property="twitter:image" content="https://luckysmileys.aztemi.com/android-chrome-192x192.png" />
+    <meta name="description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
+    <meta property="og:description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
+    <meta property="twitter:description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
   </head>
   <body>
     <noscript>
