Remove horizontal overflow scroll and unnecessary margins

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,18 @@
             Rinkeby Faucet</a
           >. In addition, reserve enough ETH as transaction fees. We recommend at least 0.001 ETH for gas.
         </p>
-        <p>Maximum of <b>2</b> NFTs can be minted per wallet.</p>
+        <p>
+          Maximum of <b>2</b> NFTs can be minted per wallet. View your NFTs on
+          <a
+            href="https://testnets.opensea.io/collection/luckysmileys"
+            title="OpenSea"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            OpenSea Testnet
+          </a>
+          after mint.
+        </p>
         <div id="loadingDiv">Loading...</div>
         <div id="controldiv" hidden>
           <div id="notrinkebydiv">
