Update URL link to the NFT Talents website

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         <p>
           This NFTs collection was created as part of the
           <a
-            href="https://philippsandner.medium.com/call-for-applications-for-nft-talents-an-18-week-mentoring-program-empowering-talent-for-ee48be501ea0"
+            href="https://web3-talents.io/nft-talents"
             title="NFT Talents"
             target="_blank"
             rel="noopener noreferrer"
@@ -264,7 +264,7 @@
           Lucky Smileys are 1000 handcrafted NFT smileys on Rinkeby Ethereum testnet. This NFTs collection was created
           as part of the
           <a
-            href="https://philippsandner.medium.com/call-for-applications-for-nft-talents-an-18-week-mentoring-program-empowering-talent-for-ee48be501ea0"
+            href="https://web3-talents.io/nft-talents"
             title="NFT Talents"
             target="_blank"
             rel="noopener noreferrer"
