Remove references to Rinkeby and add Goerli instead where appropriate

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
     <meta property="twitter:title" content="Lucky Smileys NFTs" />
     <meta name="canonical" content="https://luckysmileys.aztemi.com/" />
     <meta property="og:url" content="https://luckysmileys.aztemi.com/" />
-    <meta name="keywords" content="NFTs, Lucky Smileys, NFTTalents, Rinkeby, Ethereum" />
+    <meta name="keywords" content="NFTs, Lucky Smileys, NFTTalents, Ethereum, Testnet" />
     <meta property="og:image" content="https://luckysmileys.aztemi.com/android-chrome-192x192.png" />
     <meta property="twitter:image" content="https://luckysmileys.aztemi.com/android-chrome-192x192.png" />
-    <meta name="description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
-    <meta property="og:description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
-    <meta property="twitter:description" content="1000 handcrafted NFT smileys on Rinkeby Ethereum testnet." />
+    <meta name="description" content="1000 handcrafted NFT smileys on Ethereum testnet." />
+    <meta property="og:description" content="1000 handcrafted NFT smileys on Ethereum testnet." />
+    <meta property="twitter:description" content="1000 handcrafted NFT smileys on Ethereum testnet." />
   </head>
   <body>
     <noscript>
@@ -43,7 +43,7 @@
     <section id="home">
       <div>
         <div class="imgdiv"><img src="/android-chrome-512x512.png" alt="smileys animation gif" /></div>
-        <p>Lucky Smileys are <b>1000</b> handcrafted NFT smileys on <b>Rinkeby</b> Ethereum testnet.</p>
+        <p>Lucky Smileys are <b>1000</b> handcrafted NFT smileys on <b>Goerli</b> Ethereum testnet.</p>
         <p>
           This NFTs collection was created as part of the
           <a
@@ -57,9 +57,9 @@
           program. Special thanks to the program organizers.
         </p>
         <p>
-          Mint yours for <b>0.02 ETH</b> per NFT. Get free ETH on Rinkeby testnet from the
-          <a href="https://rinkebyfaucet.com/" title="Rinkeby Faucet" target="_blank" rel="noopener noreferrer">
-            Rinkeby Faucet</a
+          Mint yours for <b>0.02 ETH</b> per NFT. Get free ETH on Goerli testnet from the
+          <a href="https://goerlifaucet.com/" title="Goerli Faucet" target="_blank" rel="noopener noreferrer">
+            Goerli Faucet</a
           >. In addition, reserve enough ETH as transaction fees. We recommend at least 0.001 ETH for gas.
         </p>
         <p>
@@ -76,9 +76,9 @@
         </p>
         <div id="loadingDiv">Loading...</div>
         <div id="controldiv" hidden>
-          <div id="notrinkebydiv">
-            <p>Only <b>Rinkeby Testnet</b> supported.</p>
-            <p>Please change Ethereum network to Rinkeby Testnet.</p>
+          <div id="testnetdiv">
+            <p>Only <b>Goerli Testnet</b> supported.</p>
+            <p>Please change Ethereum network to Goerli Testnet.</p>
           </div>
           <div id="connectdiv">
             <button id="connectbtn">Connect Wallet</button>
@@ -261,8 +261,7 @@
       <div class="faqdiv">
         <p class="question">1. What are Lucky Smileys?</p>
         <p>
-          Lucky Smileys are 1000 handcrafted NFT smileys on Rinkeby Ethereum testnet. This NFTs collection was created
-          as part of the
+          Lucky Smileys are 1000 handcrafted NFT smileys. This NFTs collection was created as part of the
           <a
             href="https://web3-talents.io/nft-talents"
             title="NFT Talents"
@@ -271,7 +270,7 @@
           >
             NFT Talents
           </a>
-          program. Special thanks to the program organizers.
+          program on Goerli Ethereum testnet.
         </p>
       </div>
       <div class="faqdiv">
