Update smart contract address on Goerli testnet

--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,7 @@
         <p>Lucky Smileys are <b>1000</b> handcrafted NFT smileys on <b>Goerli</b> Ethereum testnet.</p>
         <p>
           This NFTs collection was created as part of the
-          <a
-            href="https://web3-talents.io/nft-talents"
-            title="NFT Talents"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
+          <a href="https://web3-talents.io/nft-talents" title="NFT Talents" target="_blank" rel="noopener noreferrer">
             NFT Talents
           </a>
           program. Special thanks to the program organizers.
@@ -262,12 +257,7 @@
         <p class="question">1. What are Lucky Smileys?</p>
         <p>
           Lucky Smileys are 1000 handcrafted NFT smileys. This NFTs collection was created as part of the
-          <a
-            href="https://web3-talents.io/nft-talents"
-            title="NFT Talents"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
+          <a href="https://web3-talents.io/nft-talents" title="NFT Talents" target="_blank" rel="noopener noreferrer">
             NFT Talents
           </a>
           program on Goerli Ethereum testnet.
@@ -290,11 +280,11 @@
         <p>
           Smart Contract Address:
           <a
-            href="https://rinkeby.etherscan.io/address/0xaB4871db78bf23CfDfF735d1be04c0396A077CC1"
+            href="https://goerli.etherscan.io/token/0x9c25c997BfD72999e56D9aFC3e9beb39C1A762f8"
             title="Etherscan"
             target="_blank"
             rel="noopener noreferrer"
-            >0xaB4871db78bf23CfDfF735d1be04c0396A077CC1</a
+            >0x9c25c997BfD72999e56D9aFC3e9beb39C1A762f8</a
           >
         </p>
         <p>
